--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@ table {
     border-spacing: 0;
 }
 
+body{
+
+}
 .container{
-    width: 1920px;
     font-family: 'Noto Sans TC';
     font-style: normal;
     font-weight: 400;
