--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -33,3 +33,15 @@
     }
 }
 
+.header{
+    height: 500px;
+    .logo{
+        background-color: #de5959;
+        a{
+            color: #f38b8b;
+            &:hover{
+                color: aliceblue;
+            }
+        }
+    }
+}
