--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,47 +1,60 @@
-.container{
-    width: 1920px;
-    font-family: 'Noto Sans TC';
+body{
+    font-family: 'Noto Sans TC , sans-serif';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    padding-top: 24px;
-    .col{
-        width: 416px;
-        padding-bottom: 24px;
-        .card{
-            &-body{
-                height: 118px;
-                left: 0px;
-                top: 312px;
-                padding: 20px 32px;
-            }
-            &-title{
-                font-weight: 900;
-                font-size: 20px;
-            }
-            &-text{
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 21px;
-                color: #525252;
-            }
-            .ai-text{
-                font-weight: bold;
-            }
-        }
+    a{
+      color: #000;
+      text-decoration: none;
     }
-}
-
-.header{
-    height: 500px;
-    .logo{
-        background-color: #de5959;
-        a{
-            color: #f38b8b;
-            &:hover{
-                color: aliceblue;
+  }
+  .container{
+      max-width: 1296px;
+      padding-top: 24px;
+      .col{
+          // width: 416px;
+          padding-bottom: 24px;
+          .card{
+            height: 100%;
+            img:hover{
+              -webkit-filter: drop-shadow(8px 8px 10px #000); /* Safari */
+              filter: drop-shadow(8px 8px 10px #000);
+              border-radius: 5px;
             }
-        }
-    }
-}
+              &-body{
+                  // height: 118px;
+                  flex-grow: 1;
+                  left: 0px;
+                  top: 312px;
+                  padding: 20px 32px;
+              }
+              &-title{
+                  font-weight: 900;
+                  font-size: 20px;
+              }
+              &-text{
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 21px;
+                  color: #525252;
+              }
+              .ai-text{
+                  font-weight: bold;
+              }
+          }
+      }
+  }
+  
+  .header{
+      height: 500px;
+      .logo{
+          background-color: #de5959;
+          a{
+              color: #f38b8b;
+              &:hover{
+                  color: aliceblue;
+              }
+          }
+      }
+  }
